input: Only release SD buttons for explicit floating/reattachment (#36146)

Grabbing an SD device temporary floats the device but we must not release
the buttons. Introduced in

    commit 9d23459415b84606ee4f38bb2d19054c432c8552
    Author: Peter Hutterer <peter.hutterer@who-t.net>
    Date:   Fri Feb 25 11:08:19 2011 +1000

    dix: release all buttons and keys before reattaching a device (#34182)

X.Org Bug 36146 <http://bugs.freedesktop.org/show_bug.cgi?id=36146>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Jeremy Huddleston <jeremyhu@apple.com>
(cherry picked from commit bf2059b07a97e5e579c13c2c9d49707093427dc2)

Conflicts:

	dix/devices.c